<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu"
        android:enabled="true"
        android:icon="@drawable/icon_outlined_menu_24"
        android:title="@string/boton_menu"
        android:contentDescription="@string/boton_menu_descripcion"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/item_ubicacion"
        android:enabled="true"
        android:icon="@drawable/icon_outlined_room_24"
        android:title="@string/boton_ubicacion"
        android:contentDescription="@string/boton_ubicacion_descripcion"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/item_favorito"
        android:enabled="true"
        android:icon="@drawable/icon_outlined_favorite_24"
        android:title="@string/boton_favorito"
        android:contentDescription="@string/boton_favorito_descripcion"
        android:orderInCategory="3"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>