<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/boton_atras_descripcion"
                app:navigationIcon="@drawable/icon_outlined_arrow_back_24"
                app:navigationIconTint="?attr/colorOnSurface"
                style="@style/Widget.Barapp.Toolbar">

                <TextView
                    android:id="@+id/labelNombreRestaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:text="@string/pantalla_reservar_titulo_nombre_restaurante"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_crear_opinion_label_calificacion_comida"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <RatingBar
                android:id="@+id/rating_bar_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pantalla_crear_opinion_label_calificacion_general"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp" />

            <RatingBar
                android:id="@+id/ratingGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />

            <EditText
                android:id="@+id/comentarioOpinion"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/pantalla_crear_opinion_hint_comentario"
                android:inputType="textMultiLine"
                android:lines="4"/>
        </LinearLayout>

        <Button
            android:id="@+id/botonEnviarOpinion"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/pantalla_crear_opinion_boton_enviar"
            android:contentDescription="@string/boton_enviar_opinion_descripcion"
            app:icon="@drawable/icon_filled_done_24"
            style="@style/Widget.Material3.Button.Icon"/>

    </LinearLayout>

</ScrollView>